# qmodelling

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  compile.py  setup.cfg  setup.py
examples/abinit/: H2_RHF_STO3G.py
examples/abinit/H2/: sto-3g.py  uhf-sto-3g.py
examples/dft/: H2_RHF_STO3G.py  H2_RHF_STO3G_V2.py  H2_RHF_STO3G_becke.py  becke_partitionning.py  h2_rks_sto3g_becke.py  h2_uks_qmodelling.py
qmodelling/: config.py  constants.pxd  constants.py  constants.pyx  energy.py  molecule.py  numba_ops.py  scf.py  utils.py
qmodelling/basis/: basis_function.py  contracted_gaussian.py  primitive_gaussian.py  primitive_gaussian.pyx
qmodelling/c_ops/: array.pxd  array.pyx  math.pxd  math.pyx
qmodelling/dft/: lda.py
qmodelling/func/: basis.py  orbital.py  primitivegaussian.py
qmodelling/integral/: becke_partitionning.py  primitive_gaussian_quadrature.py  quadrature.py  spherical_quadrature.py
qmodelling/operators/: electron_electron.py
qmodelling/tensors/: __init__.py  density.py  electron_electron.py  electron_proton.py  kinetic.py  overlap.py  proton_proton.py
test/: test_func.py  test_molecule.py  test_quadrature.py
test/basis/: constants.py  test_primitive_gaussian.py  utils.py
test/dft/: test_dft.py
test/integral/: test_becke.py  test_quadrature.py
test/operators/: test_operators.py
test/tensors/: test_operators.py
test/utils/: test_utils_get_contracted_gaussians_atom.py  test_utils_get_contracted_gaussians_molecule.py
test_cython/basis/: config.py  test_primitive_gaussian.py
test_cython/c_ops/: test_array.py
(+24 files in other folders)
