[metadata]
name = qmodelling
version = 1.0
author = Maxime LE

[options]
packages = qmodelling
python_requires = >3.8
zip_safe = False
install_requires =
    numpy
    matplotlib
    scipy
    mendeleev
    numba
    cython

[options.extras_require]
dev =
    pytest
    pre-commit
    pylint
    snakeviz
